# secure-chat-application

./: README.md  enhancements.txt  pyproject.toml  secure_chat_history.db  server_priv.pem  server_pub.pem  usage.txt
secure_chat/: __init__.py  app_config.py  cli.py  generate_keys.py
secure_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
secure_chat/crypto/: aead.py  handshake_rsa.py  handshake_x25519.py
secure_chat/net/: framing.py
secure_chat/services/: chat_service.py
secure_chat/storage/: history.py  logs.py
