[project]
name = "secure-chat"
version = "0.1.0"
description = "Privacy-Preserving Secure Chat (Phase 0 - AES-GCM, framing, CLI)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kolachalama Sri Charan" }]
dependencies = [
  "cryptography>=42.0.0",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
]

[project.scripts]
secure-chat = "secure_chat.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
